# seedance-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-28-seedance-cli.md
docs/superpowers/specs/: 2026-05-28-seedance-cli-design.md
skills/seedance/: SKILL.md
src/seedance_cli/: __main__.py
src/seedance_cli/commands/: config.py  generate.py  generate_wait.py  task.py
src/seedance_cli/core/: client.py  config.py  content.py  download.py  media_io.py  naming.py  polling.py
src/seedance_cli/framework/: envelope.py  errors.py
tests/: conftest.py
tests/integration/: test_config.py  test_generate.py  test_root.py  test_task.py
tests/unit/core/: test_client.py  test_config.py  test_content.py  test_download.py  test_media_io.py  test_naming.py  test_polling.py
tests/unit/framework/: test_envelope.py  test_errors.py
