[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seedance-cli"
version = "1.0.0"
description = "CLI for Volcengine Doubao Seedance video generation, with a companion Claude Code SKILL"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "zjandrew" }]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "rich>=13",
  "volcengine-python-sdk[ark]>=1.0.98",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff", "pyright", "respx"]

[project.scripts]
seedance-cli = "seedance_cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/seedance_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
